--- a/views/registerAdmin.ejs
+++ b/views/registerAdmin.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Register Admin</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/baguetteBox.min.css">
     <link rel="stylesheet" href="/css/smoothproducts.min.css">
@@ -64,10 +64,10 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="/">Title</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="/">Project Takeaway Assignment</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/login">Login</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/loginAdmin">Login</a></li>
                 </ul>
             </div>
             <!-- Github Banner-->
@@ -112,7 +112,7 @@
                                     <label for="confirmpassword">Confirm Password</label>
                                     <input type="password" class="form-control" name="confirmpassword" id="confirmpassword" autocomplete="off" placeholder="Confirm Password"> </div>
                                 <button class="btn btn-primary btn-block" type="submit">Sign Up</button>
-                                <p>Already Registered ? <a class="card-link" href="/login">LOGIN Here</a> </p>
+                                <p>Already Registered ? <a class="card-link" href="/loginAdmin">LOGIN Here</a> </p>
 
                     </form>
                 </div>
