user experience fixes

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -89,8 +89,12 @@
                     <h2 class="text-info">Home Page <br> Project Takeaway Assignment
                     </h2>
                     <p> Adaptive Learning Platform, leveraging gamification to engage users</p>
-                </div>
+                    <br> <br> <br>
 
+                    <a href="/registerAdmin"> <button class="btn btn-outline-primary btn-lg">Teacher Portal</button></a>
+                    <a href="/registerUser"> <button class="btn btn-outline-primary btn-lg">Student Portal</button></a>
+
+                </div>
             </div>
         </section>
     </main>
