--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -67,7 +67,7 @@
         <div class="container"><a class="navbar-brand logo" href="/">Title</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/login">Login</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/loginUser">Login</a></li>
                 </ul>
             </div>
             <!-- Github Banner-->
@@ -112,7 +112,7 @@
                                     <label for="confirmpassword">Confirm Password</label>
                                     <input type="password" class="form-control" name="confirmpassword" id="confirmpassword" autocomplete="off" placeholder="Confirm Password"> </div>
                                 <button class="btn btn-primary btn-block" type="submit">Sign Up</button>
-                                <p>Already Registered ? <a class="card-link" href="/login">LOGIN Here</a> </p>
+                                <p>Already Registered ? <a class="card-link" href="/loginUser">LOGIN Here</a> </p>
 
                     </form>
                 </div>
