--- a/views/showQuizcourse.ejs
+++ b/views/showQuizcourse.ejs
@@ -108,9 +108,9 @@
                                         <%= coursequiz[i].maxmarks %>
                                     </h3>
 
-                                    <h3> Min. Marks:
+                                    <!-- <h3> Min. Marks:
                                         <%= coursequiz[i].minmarks %>
-                                    </h3>
+                                    </h3> -->
                                     <strong>
                                         <a href="/quizCourse/<%= coursequiz[i]._id%> " >Click to Take Quiz >></a>
                                     </strong>
