--- a/views/takeQuiz.ejs
+++ b/views/takeQuiz.ejs
@@ -156,6 +156,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="/js/script.min.js"></script>
+    <script src="https://unpkg.com/ejs@3.1.3/ejs.min.js"></script>
 
     <script>
         var minmarks;
@@ -164,8 +165,9 @@
             $("input[type='button']").click(function() {
 
                 var radioValue = $("input[name='option']:checked").val();
-                var it = this.id
+                var it = this.id;
 
+                var ans;
                 if (radioValue) {
                     alert("You clicked " + radioValue + " and id is " + it + "ans " + ans);
                 }
